# webserver

./: .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  Makefile  README.md  appveyor.yml  main.cpp  server.cpp  server.h  ui.cpp  ui.h  webserver.cbp
include/: File.h  FileReader.h  Logger.h  TCPClientSocket.h  TCPServerSocket.h  Webserver.h  ddd.h  file.h  fileReader.h  http.h  server.h  ui.h
src/: CMakeLists.txt  FileReader.cpp  HTTP.cpp  HTTP.h  Logger.cpp  Server.cpp  Server.h  TCPClientSocket.cpp  TCPServerSocket.cpp  WebConnectionHandler.cpp  WebConnectionHandler.h  Webserver.cpp  Webserver.h  ddd.cpp  file.cpp  fileReader.cpp  http.cpp  main.cpp  server.cpp  ui.cpp  ui.h
src/FileReader/: CMakeLists.txt  File.cpp  File.h  FileReader.cpp  FileReader.h
src/Server/: CMakeLists.txt  Server.cpp  Server.h  TCPClientSocket.cpp  TCPClientSocket.h  TCPServerSocket.cpp  TCPServerSocket.h  TCPStreamSocket.cpp  TCPStreamSocket.h
src/Sockets/: CMakeLists.txt
test/: CMakeLists.txt  filereader.cpp  http.cpp  httpTest.cpp  httpTest.h  main.cpp  server.cpp  tcpserversocket.cpp  webserver.cpp
test/system/: index.html  system_tests.robot
